# DeepSDF_lj

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ShapeNetClass.json  ShapeNetClasses.json  ShapeNetClasses.yml  VisualizeNpz.py  VisualizeShapeInDiffFormats.py  pre_preprecess_data.py  preprocess_data.py  preprocess_data_my.py  preprocess_my.sh  processMeshToDifferentRatio.py  reconstruct  show_all_classes_in_shapenet.py  show_npz.py  train_deep_sdf.py  train_deep_sdf_my.py  training_process.sh
deep_sdf/: 1.txt  __init__.py  data.py  data_util.py  workspace.py
deep_sdf_dsp/: deep_sdf
examples/beds/: Logs.pth  specs.json
examples/bottles/: Logs.pth  specs.json
examples/bowls/: Logs.pth  specs.json
examples/chairs/: Logs.pth  specs.json  specs_1.json
examples/chairs/LatentCodes/: 120.pth  150.pth  162.pth  165.pth  168.pth  171.pth  30.pth  60.pth  latest.pth
examples/displays/: Logs.pth  specs.json
examples/keyboards/: Logs.pth  specs.json
examples/laptops/: Logs.pth  specs.json
examples/sofas/: Logs.pth  specs.json
examples/sofas/Evaluation/10/: chamfer.csv
examples/sofas/LatentCodes/: latest.pth
examples/splits/: sv2_beds_test.json  sv2_beds_train.json  sv2_bottles_test.json  sv2_bottles_train.json  sv2_bowls_test.json  sv2_bowls_train.json  sv2_chairs_test.json  sv2_chairs_train.json  sv2_chairs_train_little.json  sv2_chairs_train_part.json  sv2_displays_test.json  sv2_displays_train.json  sv2_keyboards_test.json  sv2_keyboards_train.json  sv2_laptops_test.json  sv2_laptops_train.json  sv2_sofas_test.json  sv2_sofas_train.json  sv2_tables_test.json  sv2_tables_train.json
examples/tables/: Logs.pth
scripts/: CheckedMesh.txt  filter_exist_synset.py  generate_new_example.py  problem_record.txt  showMesh.py  showMeshObj.py  showMeshPly.py  showMultiMeshObj.py  showNpz.py  showSDFSamples.py  showZeroCodeShape.py  test_target_cato.py  train_target_cato.py
shell/: basic_independences.sh  condaConfig.sh  offical_tutorial.sh  transform.sh
src/: PreprocessMesh.cpp  PreprocessMeshMy.cpp  PreprocessMesh_my.cpp  SampleVisibleMeshSurface.cpp  ShaderProgram.cpp  Utils.cpp  Utils.h
usage/: evaluate.py  plot_log.py  preprocess_data.py  reconstruct.py  train_deep_sdf.py
usage_lj/: preprocess_data.sh  preprocess_data_my.py  process_name.py  read_and_write_dir.py  show_sdf_npz.py  train_deep_sdf_my.py
